fix layout issues with done button

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -85,7 +85,8 @@ input {
   }
 
   .modal-button-close {
-    right: -26px;
+    top: -18px;
+    right: -18px;
   }
 }
 
